--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
 
-<body>
+<body class="body">
     <!-- top-line -->
 
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html"><p>Web<span class="span-logo">Studio</span></p></a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -128,7 +129,7 @@
     <!-- footer -->
 
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html"><p>Web<span class="span-logo">Studio</span></p></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
