--- a/portfolio.html
+++ b/portfolio.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="body">
 
     <!-- header -->
 
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html" class="nav-a1">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
