--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <nav>
-            <a href="./index.html"><p>Web<span class="span-logo">Studio</span></p></a>
+            <a class="logo-a" href="./index.html"><p class="logo-p">Web<span class="logo-sp">Studio</span></p></a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
