--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <header>
         <nav>
             <a class="logo-a" href="./index.html"><p class="logo-p">Web<span class="logo-sp">Studio</span></p></a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <ul class="list">
+                <li><a class="menu-a" href="./index.html">Studio</a></li>
+                <li><a class="menu-a" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="menu-a" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
-            <ul>
-                <li>
+        <address class="adress-1">
+            <ul class="list">
+                <li class="adress-link">
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
