--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header>
         <nav>
-            <a class="logo-a" class="link" href="./index.html"><p class="logo-p">Web<span class="logo-sp">Studio</span></p></a>
+            <a class="link" href="./index.html"><p class="logo-p">Web<span class="logo-sp">Studio</span></p></a>
             <ul class="list">
                 <li><a class="menu-a" href="./index.html">Studio</a></li>
                 <li><a class="menu-a" href="./portfolio.html">Portfolio</a></li>
