--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <nav>
             <a class="link" href="./index.html"><p class="logo-p">Web<span class="logo-sp">Studio</span></p></a>
             <ul class="list">
-                <li><a class="menu-a" href="./index.html">Studio</a></li>
-                <li><a class="menu-a" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="menu-a" href="">Contacts</a></li>
+                <li><a class="link" href="./index.html">Studio</a></li>
+                <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="adress-1">
             <ul class="list">
-                <li class="adress-link">
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li>
+                    <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
