--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <header>
         <nav>
             <a class="link-1" href="./index.html"><p class="logo-p">Web<span class="logo-sp">Studio</span></p></a>
-            <ul class="list">
-                <li><a class="link" href="./index.html">Studio</a></li>
-                <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="link" href="">Contacts</a></li>
+            <ul class="list-1">
+                <li><a class="link-2" href="./index.html">Studio</a></li>
+                <li><a class="link-2" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="link-2" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="adress-1">
-            <ul class="list">
+            <ul class="list-2">
                 <li>
-                    <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="link-3" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="link-3" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
