--- a/portfolio.html
+++ b/portfolio.html
@@ -12,20 +12,20 @@
 
     <header>
         <nav>
-            <a href="./index.html" class="nav-a1">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <a class="link" href="./index.html">Web<span class="logo-sp">Studio</span></a>
+            <ul class="list">
+                <li><a class="link" href="./index.html">Studio</a></li>
+                <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
-            <ul>
+        <address class="adress-1">
+            <ul class="list">
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
@@ -35,11 +35,19 @@
 
     <main>
         <section>
-        <button type="button">All</button>
-        <button type="button">Web Site</button>
-        <button type="button">App</button>
-        <button type="button">Design</button>
-        <button type="button">Marketing</button>  
+            <h1 hidden>What are we doing</h1>
+            <ul class="list">
+                <li><button class="button-section-1-port" type="button">All</button></li>
+                <li><button class="button-section-1-port" type="button">Web Site</button></li>
+                <li><button class="button-section-1-port" type="button">App</button></li>
+                <li><button class="button-section-1-port" type="button">Design</button></li>
+                <li><button class="button-section-1-port" type="button">Marketing</button></li>
+            </ul>
+            <ul>
+                <li><img src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background" srcset=""></li>
+                <li></li>
+                <li></li>
+            </ul>
         </section>
     </main>
 </body>
