--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="preconnect" href="<https://fonts.gstatic.com>">
     <title>Document</title>
 </head>
+
 <body class="body">
 
     <!-- header -->
@@ -39,18 +41,31 @@
         <section>
             <h1 hidden>What are we doing</h1>
             <ul class="list">
-                <li><button class="button-section-1-port" type="button">All</button></li>
-                <li><button class="button-section-1-port" type="button">Web Site</button></li>
-                <li><button class="button-section-1-port" type="button">App</button></li>
-                <li><button class="button-section-1-port" type="button">Design</button></li>
-                <li><button class="button-section-1-port" type="button">Marketing</button></li>
-            </ul>
-            <ul>
-                <li><img src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background" srcset=""></li>
-                <li></li>
-                <li></li>
+                <li><button class="link" type="button">All</button></li>
+                <li><button class="link" type="button">Web Site</button></li>
+                <li><button class="link" type="button">App</button></li>
+                <li><button class="link" type="button">Design</button></li>
+                <li><button class="link" type="button">Marketing</button></li>
             </ul>
         </section>
+        <section>
+        <ul>
+            <li><img class="sect-2-img" src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background">
+                <h2 class="sect-2-h">Banking App Interface Concept</h2>
+                <p class="sect-2-p">App</p>
+            </li>
+            <li>
+                <img class="sect-2-img" src="./images/img-portf-2.jpg" alt="iphone on the background of the scaner">
+                <h2 class="sect-2-h">Cashless Payment</h2>
+                <p class="sect-2-p">Marketing</p>
+            </li>
+            <li>
+                <img class="sect-2-img" src="./images/img-portf-3.jpg" alt="iphone on the background of the MacBook">
+                <h2 class="sect-2-h">Meditation App</h2>
+                <p class="sect-2-p">App</p>
+            </li>
+        </ul>
+    </section>
     </main>
 </body>
 </html>
