--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header>
         <nav>
-            <a class="link" href="./index.html">Web<span class="logo-sp">Studio</span></a>
+            <a class="logo-link" href="./index.html">Web<span class="logo-color">Studio</span></a>
             <ul class="list">
                 <li><a class="link" href="./index.html">Studio</a></li>
                 <li><a class="link" href="./portfolio.html">Portfolio</a></li>
