--- a/portfolio.html
+++ b/portfolio.html
@@ -47,20 +47,18 @@
                 <li><button class="link" type="button">Design</button></li>
                 <li><button class="link" type="button">Marketing</button></li>
             </ul>
-        </section>
-        <section>
-        <ul>
-            <li><img class="sect-2-img" src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background">
+        <ul class="list">
+            <li><img src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background" class="sect-2-img">
                 <h2 class="sect-2-h">Banking App Interface Concept</h2>
                 <p class="sect-2-p">App</p>
             </li>
             <li>
-                <img class="sect-2-img" src="./images/img-portf-2.jpg" alt="iphone on the background of the scaner">
+                <img src="./images/img-portf-2.jpg" alt="iphone on the background of the scaner" class="sect-2-img">
                 <h2 class="sect-2-h">Cashless Payment</h2>
                 <p class="sect-2-p">Marketing</p>
             </li>
             <li>
-                <img class="sect-2-img" src="./images/img-portf-3.jpg" alt="iphone on the background of the MacBook">
+                <img src="./images/img-portf-3.jpg" alt="iphone on the background of the MacBook" class="sect-2-img">
                 <h2 class="sect-2-h">Meditation App</h2>
                 <p class="sect-2-p">App</p>
             </li>
