--- a/portfolio.html
+++ b/portfolio.html
@@ -41,14 +41,16 @@
         <section>
             <h1 hidden>What are we doing</h1>
             <ul class="list">
-                <li><button class="link" type="button">All</button></li>
-                <li><button class="link" type="button">Web Site</button></li>
-                <li><button class="link" type="button">App</button></li>
-                <li><button class="link" type="button">Design</button></li>
-                <li><button class="link" type="button">Marketing</button></li>
+                <li><button class="button-link" type="button">All</button></li>
+                <li><button class="button-link" type="button">Web Site</button></li>
+                <li><button class="button-link" type="button">App</button></li>
+                <li><button class="button-link" type="button">Design</button></li>
+                <li><button class="button-link" type="button">Marketing</button></li>
             </ul>
         <ul class="list">
-            <li><img src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background" class="sect-2-img">
+            <li>
+                <a href=""></a>
+                <img src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background" class="sect-2-img">
                 <h2 class="sect-2-h">Banking App Interface Concept</h2>
                 <p class="sect-2-p">App</p>
             </li>
