--- a/portfolio.html
+++ b/portfolio.html
@@ -49,19 +49,25 @@
             </ul>
         <ul class="list">
             <li>
-                <a href=""><img src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background" class="sect-2-img"></a>
-                <h2 class="sect-2-h">Banking App Interface Concept</h2>
-                <p class="sect-2-p">App</p>
+                <a href="">
+                    <img src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background" class="sect-2-img">
+                    <h2 class="sect-2-h">Banking App Interface Concept</h2>
+                    <p class="sect-2-p">App</p>
+                </a>
             </li>
             <li>
-                <a href=""><img src="./images/img-portf-2.jpg" alt="iphone on the background of the scaner" class="sect-2-img"></a>
-                <h2 class="sect-2-h">Cashless Payment</h2>
-                <p class="sect-2-p">Marketing</p>
+                <a href="">
+                    <img src="./images/img-portf-2.jpg" alt="iphone on the background of the scaner" class="sect-2-img">
+                    <h2 class="sect-2-h">Cashless Payment</h2>
+                    <p class="sect-2-p">Marketing</p>
+                </a>
+                
             </li>
             <li>
-                <a href=""><img src="./images/img-portf-3.jpg" alt="iphone on the background of the MacBook" class="sect-2-img"></a>
-                <h2 class="sect-2-h">Meditation App</h2>
-                <p class="sect-2-p">App</p>
+                <a href="">
+                    <img src="./images/img-portf-3.jpg" alt="iphone on the background of the MacBook" class="sect-2-img">
+                    <h2 class="sect-2-h">Meditation App</h2>
+                    <p class="sect-2-p">App</p></a>
             </li>
         </ul>
     </section>
