--- a/portfolio.html
+++ b/portfolio.html
@@ -69,8 +69,55 @@
                     <h2 class="sect-2-h">Meditation App</h2>
                     <p class="sect-2-p">App</p></a>
             </li>
+            <li>
+                <a href="">
+                    <img src="./images/img-portf-4.jpg" alt="taxi salon" class="sect-2-img">
+                <h2 class="sect-2-h">Taxi Service</h2>
+                <p class="sect-2-p">Marketing</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./images/img-portf-5.jpg" alt="purple phones" class="sect-2-img">
+                    <h2 class="sect-2-h">Screen Illustrations</h2>
+                    <p class="sect-2-p">Design</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./images/img-portf-6.jpg" alt="women in a yellow blouse" class="sect-2-img">
+                    <h2 class="sect-2-h">Online Courses</h2>
+                    <p class="sect-2-p">Marketing</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./images/img-portf-7.jpg" alt="instagramm stories" class="sect-2-img">
+                    <h2 class="sect-2-h">Instagram Stories Concept</h2>
+                    <p class="sect-2-p">Marketing</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./images/img-portf-8.jpg" alt="organic fod in a packet" class="sect-2-img">
+                    <h2 class="sect-2-h">Organic Food</h2>
+                    <p class="sect-2-p">Web Site</p>
+                </a>
+            </li>
+            <li>
+                <img src="./images/img-portf-9.jpg" alt="coffe" class="sect-2-img">
+                <h2 class="sect-2-h">Fresh Coffee</h2>
+                <p class="sect-2-p">Web Site</p>
+            </li>
         </ul>
     </section>
     </main>
+    <!-- footer -->
+    <footer>
+        <a class="logo-link" href="./index.html">Web<span class="logo-color">Studio</span></a>
+        <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+    </footer>
 </body>
 </html>
