--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 
     <header>
         <nav>
-            <a class="logo-link" href="./index.html">Web<span class="logo-color">Studio</span></a>
-            <ul class="list">
-                <li><a class="link" href="./index.html">Studio</a></li>
-                <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="link" href="">Contacts</a></li>
+            <a class="logo-link" href="./index.html">Web<span class="logo-color-link">Studio</span></a>
+            <ul class="menu-list">
+                <li><a class="menu-link" href="./index.html">Studio</a></li>
+                <li><a class="menu-link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="menu-link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="adress-1">
-            <ul class="list">
+        <address class="address">
+            <ul class="address-list">
                 <li>
-                    <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
