--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
     <header>
         <nav>
-            <a class="logo-link" href="./index.html">Web<span class="logo-color-link">Studio</span></a>
-            <ul class="menu-list">
-                <li><a class="menu-link" href="./index.html">Studio</a></li>
-                <li><a class="menu-link" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="menu-link" href="">Contacts</a></li>
+            <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
+            <ul class="nav-menu list">
+                <li><a class="nav-menu-link link" href="./index.html">Studio</a></li>
+                <li><a class="nav-menu-link link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="nav-menu-link link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="address">
