--- a/portfolio.html
+++ b/portfolio.html
@@ -26,12 +26,12 @@
             </ul>
         </nav>
         <address class="adress-1">
-            <ul class="list">
+            <ul class="address-list list">
                 <li>
-                    <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
