--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
     <main>
         <!-- hero -->
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="hero">
+            <h1 class="hero=h">Effective Solutions for Your Business</h1>
+            <button class="hero-btn" type="button">Order Service</button>
         </section>
         <!-- section-1 -->
 
