--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
         <!-- hero -->
         <section class="hero">
-            <h1 class="hero=h">Effective Solutions for Your Business</h1>
+            <h1 class="hero-h">Effective Solutions for Your Business</h1>
             <button class="hero-btn" type="button">Order Service</button>
         </section>
         <!-- section-1 -->
