--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
             <h2 class="about-h" hidden >About Us</h2>
             <ul class="about-ul list">
                 <li>
-                    <h3 class="about-h">Strategy</h3>
+                    <h3 class="about-list-h">Strategy</h3>
                         <p class="text">
                             Our goal is to identify the business problem to walk away with the
                             perfect and creative solution.
                         </p>
                 </li>
                 <li>
-                    <h3 class="about-h">Punctuality</h3>
+                    <h3 class="about-list-h">Punctuality</h3>
                     <p class="text">
                         Bring the key message to the brand's audience for the best price
                         within the shortest possible time.
                     </p>
                 </li>
                 <li>
-                    <h3 class="about-h">Diligence</h3>
+                    <h3 class="about-list-h">Diligence</h3>
                     <p class="text">
                         Research and confirm brands that present the strongest digital
                         growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li>
-                    <h3 class="about-h">Technologies</h3>
+                    <h3 class="about-list-h">Technologies</h3>
                     <p class="text">
                         Design practice focused on digital experiences. We bring forth a
                         deep passion for problem-solving.
@@ -85,8 +85,8 @@
         <!-- section-2 -->
 
         <section>
-            <h2>What are we doing</h2>
-            <ul>
+            <h2 class="speciality-h">What are we doing</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/img-1.jpg" alt="new Mac" width="360">
                 </li>
