--- a/index.html
+++ b/index.html
@@ -101,31 +101,31 @@
 
         <!-- section-3 -->
 
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
+        <section class="team">
+            <h2 class="team-h">Our Team</h2>
+            <ul class="list">
+                <li class="team-li">
                     <img src="./images/img.jpg"
                         alt="Middle-aged man with dark eyes and straight, short, also dark hair and a beard" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-list-h">Mark Guerrero</h3>
+                    <p class="team-p">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-li">
                     <img src="./images/img-team-member-4.jpg"
                         alt="Young man with a small light beard and blond medium hair" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-list-h">Tom Ford</h3>
+                    <p class="team-p">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-li">
                     <img src="./images/img-team-member-5.jpg" alt="young girl with makeup and long pink hair" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-list-h">Camila Garcia</h3>
+                    <p class="team-p">Marketing</p>
                 </li>
-                <li>
+                <li class="team-li">
                     <img src="./images/img-team-member-6.jpg"
                         alt="a young rather guy with a short, sparse beard and curly hair" width="264">
                     <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <p class="team-p">UI Designer</p>
                 </li>
             </ul>
         </section>
