--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <li class="team-li">
                     <img src="./images/img-team-member-6.jpg"
                         alt="a young rather guy with a short, sparse beard and curly hair" width="264">
-                    <h3>Daniel Wilson</h3>
+                    <h3 class="team-list-h">Daniel Wilson</h3>
                     <p class="team-p">UI Designer</p>
                 </li>
             </ul>
@@ -132,8 +132,8 @@
     </main>
 
     <!-- footer -->
-    <footer>
-        <a href="./index.html"><p>Web<span class="span-logo">Studio</span></p></a>
+    <footer class="footer">
+        <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
