--- a/portfolio.html
+++ b/portfolio.html
@@ -5,27 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
+        rel="stylesheet">
     
     <title>Document</title>
 </head>
 
-<body class="body">
+<body>
 
     <!-- header -->
 
     <header>
         <nav>
-            <a class="link" href="./index.html">Web<span class="logo-sp">Studio</span></a>
-            <ul class="list">
-                <li><a class="link" href="./index.html">Studio</a></li>
-                <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="link" href="">Contacts</a></li>
+            <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
+            <ul class="nav-menu list">
+                <li><a class="nav-menu-link link" href="./index.html">Studio</a></li>
+                <li><a class="nav-menu-link link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="nav-menu-link link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="adress-1">
+        <address class="address">
             <ul class="address-list list">
                 <li>
                     <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
