--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <!-- footer -->
     <footer class="footer">
-        <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
+        <a class="logo link" href="./index.html">Web<span class="footer-span">Studio</span></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
