--- a/portfolio.html
+++ b/portfolio.html
@@ -53,66 +53,69 @@
                 <li><button class="button-link" type="button">Marketing</button></li>
             </ul>
         <ul class="list">
-            <li class="link">
-                <a href="">
-                    <img src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background" class="sect-2-img">
+            <li>
+                <a class="portf-a link" href="">
+                    <img class="" src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background" class="sect-2-img">
                     <h2 class="sect-2-h">Banking App Interface Concept</h2>
                     <p class="sect-2-p">App</p>
                 </a>
             </li>
-            <li class="link">
-                <a href="">
+            <li>
+                <a class="portf-a link" href="">
                     <img src="./images/img-portf-2.jpg" alt="iphone on the background of the scaner" class="sect-2-img">
                     <h2 class="sect-2-h">Cashless Payment</h2>
                     <p class="sect-2-p">Marketing</p>
                 </a>
                 
             </li>
-            <li class="link"> 
-                <a href="">
+            <li> 
+                <a class="portf-a link" href="">
                     <img src="./images/img-portf-3.jpg" alt="iphone on the background of the MacBook" class="sect-2-img">
                     <h2 class="sect-2-h">Meditation App</h2>
                     <p class="sect-2-p">App</p></a>
             </li>
             <li class="link"> 
-                <a href="">
+                <a class="portf-a link" href="">
                     <img src="./images/img-portf-4.jpg" alt="taxi salon" class="sect-2-img">
                 <h2 class="sect-2-h">Taxi Service</h2>
                 <p class="sect-2-p">Marketing</p>
                 </a>
             </li>
-            <li class="link">
-                <a href="">
-                    <img src="./images/img-portf-5.jpg" alt="purple phones" class="sect-2-img">
+            <li>
+                <a class="portf-a link" href="">
+                    <img class="portf-a link" src="./images/img-portf-5.jpg" alt="purple phones" class="sect-2-img">
                     <h2 class="sect-2-h">Screen Illustrations</h2>
                     <p class="sect-2-p">Design</p>
                 </a>
             </li>
-            <li class="link">
-                <a href="">
-                    <img src="./images/img-portf-6.jpg" alt="women in a yellow blouse" class="sect-2-img">
+            <li>
+                <a class="portf-a link" href="">
+                    <img class="portf-a link" src="./images/img-portf-6.jpg" alt="women in a yellow blouse" class="sect-2-img">
                     <h2 class="sect-2-h">Online Courses</h2>
                     <p class="sect-2-p">Marketing</p>
                 </a>
             </li>
-            <li class="link">
-                <a href="">
-                    <img src="./images/img-portf-7.jpg" alt="instagramm stories" class="sect-2-img">
+            <li>
+                <a class="portf-a link" href="">
+                    <img class="portf-a link" src="./images/img-portf-7.jpg" alt="instagramm stories" class="sect-2-img">
                     <h2 class="sect-2-h">Instagram Stories Concept</h2>
                     <p class="sect-2-p">Marketing</p>
                 </a>
             </li>
-            <li class="link">
-                <a href="">
-                    <img src="./images/img-portf-8.jpg" alt="organic fod in a packet" class="sect-2-img">
+            <li>
+                <a class="portf-a link" href="">
+                    <img class="portf-a link" src="./images/img-portf-8.jpg" alt="organic fod in a packet" class="sect-2-img">
                     <h2 class="sect-2-h">Organic Food</h2>
                     <p class="sect-2-p">Web Site</p>
                 </a>
             </li>
-            <li class="link">
-                <img src="./images/img-portf-9.jpg" alt="coffe" class="sect-2-img">
-                <h2 class="sect-2-h">Fresh Coffee</h2>
-                <p class="sect-2-p">Web Site</p>
+            <li>
+                <a class="portf-a link" href="">
+                    <img class="portf-a link" src="./images/img-portf-9.jpg" alt="coffe" class="sect-2-img">
+                    <h2 class="sect-2-h">Fresh Coffee</h2>
+                    <p class="sect-2-p">Web Site</p>
+                </a>
+                
             </li>
         </ul>
     </section>
