--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
                 <a class="portf-a link" href="">
                     <img class="portf-a link" src="./images/img-portf-7.jpg" alt="instagramm stories" class="sect-2-img">
                     <h2 class="sect-2-h">Instagram Stories Concept</h2>
-                    <p class="sect-2-p">Marketing</p>
+                    <p class="sect-2-p">Design</p>
                 </a>
             </li>
             <li>
@@ -121,8 +121,8 @@
     </section>
     </main>
     <!-- footer -->
-    <footer>
-        <a class="logo-link" href="./index.html">Web<span class="logo-color">Studio</span></a>
+    <footer class="footer-portf">
+        <a class="logo link" href="./index.html">Web<span class="logo-sp">Studio</span></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
