--- a/index.html
+++ b/index.html
@@ -132,7 +132,12 @@
     </main>
 
     <!-- footer -->
-    
+    <footer class="footer">
+        <a class="logo link" href="./index.html">Web<span class="footer-span">Studio</span></a>
+        <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+    </footer>
 </body>
 
 </html>
