--- a/portfolio.html
+++ b/portfolio.html
@@ -121,8 +121,8 @@
     </section>
     </main>
     <!-- footer -->
-    <footer class="footer-portf">
-        <a class="logo link" href="./index.html">Web<span class="logo-sp">Studio</span></a>
+    <footer class="footer">
+        <a class="logo link" href="./index.html">Web<span class="footer-span">Studio</span></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
