--- a/portfolio.html
+++ b/portfolio.html
@@ -56,8 +56,8 @@
             <li>
                 <a class="portf-a link" href="">
                     <img class="" src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background" class="sect-2-img">
-                    <h2 class="sect--h">Banking App Interface Concept</h2>
-                    <p class="sect--p">App</p>
+                    <h2 class="sect-h">Banking App Interface Concept</h2>
+                    <p class="sect-p">App</p>
                 </a>
             </li>
             <li>
