--- a/portfolio.html
+++ b/portfolio.html
@@ -55,14 +55,14 @@
         <ul class="list">
             <li>
                 <a class="portf-a link" href="">
-                    <img class="" src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background" class="sect-2-img">
+                    <img class="" src="./images/img-portf-1.jpg" alt="a lot of phones on the purple background">
                     <h2 class="sect-h">Banking App Interface Concept</h2>
                     <p class="sect-p">App</p>
                 </a>
             </li>
             <li>
                 <a class="portf-a link" href="">
-                    <img src="./images/img-portf-2.jpg" alt="iphone on the background of the scaner" class="sect-2-img">
+                    <img src="./images/img-portf-2.jpg" alt="iphone on the background of the scaner">
                     <h2 class="sect-h">Cashless Payment</h2>
                     <p class="sect-p">Marketing</p>
                 </a>
@@ -70,7 +70,7 @@
             </li>
             <li> 
                 <a class="portf-a link" href="">
-                    <img src="./images/img-portf-3.jpg" alt="iphone on the background of the MacBook" class="sect-2-img">
+                    <img src="./images/img-portf-3.jpg" alt="iphone on the background of the MacBook">
                     <h2 class="sect-h">Meditation App</h2>
                     <p class="sect-p">App</p></a>
             </li>
@@ -83,35 +83,35 @@
             </li>
             <li>
                 <a class="portf-a link" href="">
-                    <img class="portf-a link" src="./images/img-portf-5.jpg" alt="purple phones" class="sect-2-img">
+                    <img src="./images/img-portf-5.jpg" alt="purple phones">
                     <h2 class="sect-h">Screen Illustrations</h2>
                     <p class="sect-p">Design</p>
                 </a>
             </li>
             <li>
                 <a class="portf-a link" href="">
-                    <img class="portf-a link" src="./images/img-portf-6.jpg" alt="women in a yellow blouse" class="sect-2-img">
+                    <img src="./images/img-portf-6.jpg" alt="women in a yellow blouse">
                     <h2 class="sect-h">Online Courses</h2>
                     <p class="sect-p">Marketing</p>
                 </a>
             </li>
             <li>
                 <a class="portf-a link" href="">
-                    <img class="portf-a link" src="./images/img-portf-7.jpg" alt="instagramm stories" class="sect-2-img">
+                    <img src="./images/img-portf-7.jpg" alt="instagramm stories">
                     <h2 class="sect-h">Instagram Stories Concept</h2>
                     <p class="sect-p">Design</p>
                 </a>
             </li>
             <li>
                 <a class="portf-a link" href="">
-                    <img class="portf-a link" src="./images/img-portf-8.jpg" alt="organic fod in a packet" class="sect-2-img">
+                    <img src="./images/img-portf-8.jpg" alt="organic fod in a packet">
                     <h2 class="sect-h">Organic Food</h2>
                     <p class="sect-p">Web Site</p>
                 </a>
             </li>
             <li>
                 <a class="portf-a link" href="">
-                    <img class="portf-a link" src="./images/img-portf-9.jpg" alt="coffe" class="sect-2-img">
+                    <img src="./images/img-portf-9.jpg" alt="coffe">
                     <h2 class="sect-h">Fresh Coffee</h2>
                     <p class="sect-p">Web Site</p>
                 </a>
