--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
             <ul class="nav-menu list">
                 <li><a class="nav-menu-link link" href="./index.html">Studio</a></li>
-                <li><a class="nav-menu-link link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="nav-menu-link link" href="">Portfolio</a></li>
                 <li><a class="nav-menu-link link" href="">Contacts</a></li>
             </ul>
         </nav>
@@ -84,20 +84,7 @@
 
         <!-- section-2 -->
 
-        <section>
-            <h2 class="speciality-h">What are we doing</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/img-1.jpg" alt="new Mac" width="360">
-                </li>
-                <li>
-                    <img src="./images/img-2.jpg" alt="A phone with many screaming sreens" width="360">
-                </li>
-                <li>
-                    <img src="./images/img-3.jpg" alt="An iphone on the background of a MacBook" width="360">
-                </li>
-            </ul>
-        </section>
+        
 
         <!-- section-3 -->
 
