--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
             <ul class="nav-menu list">
                 <li><a class="nav-menu-link link" href="./index.html">Studio</a></li>
-                <li><a class="nav-menu-link link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="nav-menu-link link" href="">Portfolio</a></li>
                 <li><a class="nav-menu-link link" href="">Contacts</a></li>
             </ul>
         </nav>
