--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     <!-- main -->
 
     <main>
-        <section>
+        <!-- <section>
             <h1 hidden>What are we doing</h1>
             <ul class="list">
                 <li><button class="button-link" type="button">All</button></li>
@@ -118,7 +118,7 @@
                 
             </li>
         </ul>
-    </section>
+    </section> -->
     </main>
     <!-- footer -->
     <footer class="footer">
