--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 
         <!-- section-3 -->
         <section>
+            <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="list">
             <li>
                 <a class="portf-a link" href="">
